# media-player

./: CMakeLists.txt  CMakeLists.txt.qtds  Main.qml  README.md  filesystemmodel.cpp  filesystemmodel.h  qmldir
Excalidraw/: Excalidraw-Media Player.excalidraw  Untitled-2024-03-14-2103.excalidraw
content/: App.qml  Screen01.ui.qml
qml/: About.qml  Colors.qml  FileSystemView.qml  MusicSystemView.qml  MusicWindow.qml  MyMenu.qml  Sidebar.qml
qml/MediaPlayer/: PlaybackControl.qml  PlaybackRateControl.qml  PlaybackSeekControl.qml  Player.qml
qml/MediaPlayerQml/: AudioControl.qml  PlaybackControl.qml  PlaybackSeekControl.qml  Player.qml
src/: main.cpp
